<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_package_name" translatable="false">com.google.android.apps.authenticator</string>
  <string name="app_name">Maite Authenticator</string>
  <string name="app_name_short">Maite Authenticator</string>
  <string name="enter_key_title">Manual account entry</string>
  <string name="enter_key_page_add_button">Add</string>
  <string name="button_add_account">Add an account</string>
  <string name="button_how_it_works">See how it works</string>
  <string name="add_account_menu_item">Add account</string>
  <string name="how_it_works_menu_item">How it works</string>
  <string name="main_preference_screen_title">Settings</string>
  <string name="about_preference_title">About</string>
  <string name="settings_menu_item">Settings</string>
  <string name="button_add_account_manual_entry">Manually add account</string>
  <string name="button_add_account_scan_barcode">Scan barcode</string>
  <string name="button_next">Next</string>
  <string name="button_back">Back</string>
  <string name="enter_account_label">Enter account name</string>
  <string name="enter_key_hint">Enter your key</string>
  <string name="enter_key_too_short">Key value is too short</string>
  <string name="enter_key_illegal_char">Key value has illegal character</string>
  <string name="error_title">Error</string>
  <string name="error_uri">Key not recognized.</string>
  <string name="error_qr">Cannot interpret QR code.</string>
  <string name="secret_saved">Secret saved</string>
  <string name="save_key_message">Save key for</string>
  <string name="error_empty_secret">Cannot save empty secret</string>
  <string name="enter_pin">
    Enter this verification code if prompted during account sign-in:
  </string>
  <string name="check_code_title">Integrity check value</string>
  <string name="check_code_menu_item">Check key value</string>
  <string name="install_dialog_title">Install barcode scanner?</string>
  <string name="install_dialog_message">
    To scan barcodes containing keys, you must install the ZXing barcode scanner.
   </string>
  <string name="install_button">Install</string>
  <string name="about_preference_screen_title">About</string>
  <string name="version_preference_title">Version</string>
  <string name="opensource_preference_title">Open-source project</string>
  <string name="opensource_page_url" translatable="false">https://github.com/google/google-authenticator/</string>
  <string name="terms_preference_title">Terms of service</string>
  <string name="terms_page_url" translatable="false">http://m.google.com/tospage</string>
  <string name="privacy_preference_title">Privacy policy</string>
  <string name="privacy_page_url" translatable="false">http://www.google.com/policies/privacy/</string>
  <string name="check_code">
  To check that you have the correct key value for <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g>
  verify that the value here matches the integrity check value provided
  by the server:&lt;br/>
  </string>
  <string name="general_security_exception">General security exception</string>
  <string name="decoding_exception">Decoding exception</string>
  <string name="submit">Save</string>
  <string name="cancel">Cancel</string>
  <string name="context_menu_remove_account">Remove</string>
  <string name="remove_account_dialog_button_remove">Remove account</string>
  <string name="remove_account_dialog_title">
    Remove <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g>?
  </string>
  <string name="remove_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-factor authentication. This may prevent you from signing into your
      account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-factor authentication for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
  </string>
  <string name="remove_google_account_dialog_message">
    <![CDATA[
      Removing this account will <b>remove your ability</b> to generate codes, however, it will
      <b>not</b> turn off 2-step verification. This may prevent you from signing into your account.
      <p>
      Before removing:
      <ul>
        <li>Turn off 2-step verification for this account, or</li>
        <li>Ensure you have an alternate mechanism for generating codes.</li>
      </ul>
    ]]>
  </string>
  <string name="rename">Rename</string>
  <string name="rename_message">Rename <xliff:g example="mallory@gmail.com" id="account">%1$s</xliff:g></string>
  <string name="error_exists">Sorry, that name is already in use.</string>
  <string name="copy_to_clipboard">Copy to clipboard</string>
  <string name="counter_pin">Get code</string>
  <string name="empty_pin">_ _ _ _ _ _</string>
  <string name="ok">OK</string>
  <string name="type_prompt">Type of key</string>
  <string-array name="type">
    <item>Time based</item>
    <item>Counter based</item>
  </string-array>
  <string name="dataimport_import_succeeded_uninstall_dialog_title">Import succeeded</string>
  <string name="dataimport_import_succeeded_uninstall_dialog_prompt">
    Your data has been successfully imported from the deprecated Google Authenticator app.
    It is now safe to uninstall the prior version of the app by clicking below.
  </string>
  <string name="button_uninstall_old_app">Uninstall</string>
  <string name="howitworks_page_enter_password_title">
    To sign in, you\'ll enter your password.
  </string>
  <string name="howitworks_page_enter_password_details">
    However, if you\'re at a new computer or device, Google will ask you for a special code to make
    sure it\'s really you.
  </string>
  <string name="howitworks_page_enter_code_title">
    If you\'re on a new computer, enter a code from your phone.
  </string>
  <string name="howitworks_page_enter_code_details">
    This app will generate the code needed to proceed with sign in.
  </string>
  <string name="howitworks_page_verify_device_title">
    Then you\'re signed in.
  </string>
  <string name="howitworks_page_verify_device_details">
    You can also choose to remember the computer and Google won\'t ask you for a code there again.
  </string>
  <string name="button_exit_howitworks_flow">Exit</string>
  <string name="welcome_page_title">
    Thousands of online accounts are hijacked every day.
  </string>
  <string name="welcome_page_details">
    Thesis project authentication by robust  OTP code.
  </string>
  <string name="usuario">Usuario:</string>
  <string name="contrasena">Contraseña:</string>
  <string name="ingresa_pin">FAVOR INGRESAR PIN</string>
  <string name="confirma_pin">CONFIRMAR PIN</string>
  <string name="screen_ingreso_pin">Ingreso de Pin</string>
  <string name="en_linea">En Linea</string>
  <string name="listado_otp">LISTADO OTP</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
  <string name="registering_message">Generating InstanceID token…</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
  <string name="btn_conectar">conectar</string>
  <string name="txtIP">192.168.10.139</string>
  <string name="server_localhost">http://expriceit.com.ec/content/listo/</string>
  <string name="txtPuerto">100</string>
  <string name="editText1" />
  <string name="txtViewRespuesta">Respuesta</string>
  <string name="btn_send">send</string>
  <string name="btn_reset">Resetear</string>
</resources>