<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:clipToPadding="true">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:text="@string/txtIP"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/port"
            android:text="@string/txtPuerto"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_conectar"
            android:id="@+id/connect"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_gravity="center_horizontal"
        android:text="@string/editText1"
        android:hint="enviar OTp"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:onClick="send" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/response" />


</LinearLayout>