<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2009 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:clipToPadding="true">
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_height="fill_parent" android:layout_width="fill_parent"
      android:clipToPadding="true">
      <LinearLayout android:id="@+id/content_no_accounts"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp">
        <TextView
          android:text="@string/welcome_page_title"
          android:textStyle="bold"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
       <TextView
          android:id="@+id/details"
          android:text="@string/welcome_page_details"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:layout_marginTop="30sp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        />
        <Button android:id="@+id/how_it_works_button"
          android:text="@string/button_how_it_works"
          android:layout_marginTop="30sp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <Button android:id="@+id/add_account_button"
          android:text="@string/button_add_account"
          android:layout_marginTop="10sp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" />
      </LinearLayout>
      <LinearLayout android:id="@+id/content_accounts_present"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">
        <TextView
          android:id="@+id/enter_pin_prompt"
          android:text="@string/enter_pin"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
        />
      </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/content_switcher_line"
            android:gravity="center_horizontal">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_linea"
                android:id="@+id/swt_linea"
                android:visibility="invisible" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnMostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#048175"
                fancy:fb_focusColor="#23e2a3"
                fancy:fb_fontIconResource="&#xf04b;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="VER"
                fancy:fb_textColor="#FFFFFF"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#7ab800"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_fontIconResource="&#xf04b;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="30dp"
                fancy:fb_text="Enviar"
                fancy:fb_textColor="#FFFFFF"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>
  </ScrollView>

    <ListView android:id="@+id/user_list"
    android:layout_width="fill_parent" android:layout_height="0dp"
    style="?attr/accountListWithVerificationCodes"
      android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>
</LinearLayout>

